set02/problem08_compile_errors.txt
Compilation started at 11/7/2023, 5:55:26 PM
Compilation finished at 11/7/2023, 5:55:29 PM
Compilation started at 11/7/2023, 5:59:58 PM
Compilation finished at 11/7/2023, 6:00:02 PM
Compilation started at 11/7/2023, 6:02:04 PM
Compilation finished at 11/7/2023, 6:02:08 PM
Compilation started at 11/7/2023, 6:05:44 PM
Compilation finished at 11/7/2023, 6:05:46 PM
Compilation started at 11/7/2023, 6:07:33 PM
Compilation finished at 11/7/2023, 6:07:35 PM
Compilation started at 11/7/2023, 6:08:55 PM
Compilation finished at 11/7/2023, 6:08:58 PM
Compilation started at 11/7/2023, 6:10:04 PM
Compilation finished at 11/7/2023, 6:10:06 PM
Compilation started at 11/7/2023, 6:10:41 PM
Compilation finished at 11/7/2023, 6:10:43 PM
Compilation started at 11/7/2023, 6:12:27 PM
Compilation finished at 11/7/2023, 6:12:29 PM
Compilation started at 11/7/2023, 6:13:23 PM
Compilation finished at 11/7/2023, 6:13:25 PM
Compilation started at 11/7/2023, 6:14:02 PM
Compilation finished at 11/7/2023, 6:14:05 PM
Compilation started at 11/7/2023, 6:17:06 PM
Compilation finished at 11/7/2023, 6:17:08 PM
Compilation started at 11/25/2023, 6:51:40 AM
Compilation finished at 11/25/2023, 6:51:44 AM
Compilation started at 11/25/2023, 3:54:12 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c: In function 'input_triangle':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:29:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf("Enter the base of the triangle: ");
     ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:29:5: warning: incompatible implicit declaration of built-in function 'printf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:29:5: note: include '<stdio.h>' or provide a declaration of 'printf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:30:5: warning: implicit declaration of function 'scanf' [-Wimplicit-function-declaration]
     scanf("%f",&tri.base);
     ^~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:30:5: warning: incompatible implicit declaration of built-in function 'scanf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:30:5: note: include '<stdio.h>' or provide a declaration of 'scanf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c: In function 'input_n_triangles':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:38:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("Please enter the total number of triangles: ");
     ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:38:5: note: include '<stdio.h>' or provide a declaration of 'printf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:39:5: warning: incompatible implicit declaration of built-in function 'scanf'
     scanf("%d",&n);
     ^~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:39:5: note: include '<stdio.h>' or provide a declaration of 'scanf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c: In function 'output':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:81:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("The smallest area is (%f,%f) having area %f",smallest.base,smallest.altitude,smallest.area);
     ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:81:5: note: include '<stdio.h>' or provide a declaration of 'printf'
Compilation finished at 11/25/2023, 3:54:18 PM
Compilation started at 11/25/2023, 3:54:51 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c: In function 'input_triangle':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:29:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf("Enter the base of the triangle: ");
     ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:29:5: warning: incompatible implicit declaration of built-in function 'printf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:29:5: note: include '<stdio.h>' or provide a declaration of 'printf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:30:5: warning: implicit declaration of function 'scanf' [-Wimplicit-function-declaration]
     scanf("%f",&tri.base);
     ^~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:30:5: warning: incompatible implicit declaration of built-in function 'scanf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:30:5: note: include '<stdio.h>' or provide a declaration of 'scanf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c: In function 'input_n_triangles':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:38:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("Please enter the total number of triangles: ");
     ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:38:5: note: include '<stdio.h>' or provide a declaration of 'printf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:39:5: warning: incompatible implicit declaration of built-in function 'scanf'
     scanf("%d",&n);
     ^~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:39:5: note: include '<stdio.h>' or provide a declaration of 'scanf'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c: In function 'output':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:81:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("The smallest area is (%f,%f) having area %f",smallest.base,smallest.altitude,smallest.area);
     ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:81:5: note: include '<stdio.h>' or provide a declaration of 'printf'
Compilation finished at 11/25/2023, 3:54:54 PM
Compilation started at 11/25/2023, 3:55:16 PM
Compilation finished at 11/25/2023, 3:55:20 PM
Compilation started at 11/25/2023, 3:57:09 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:29:1: error: expected identifier or '(' before '{' token
 {
 ^
Compilation finished at 11/25/2023, 3:57:12 PM
Compilation started at 11/25/2023, 3:57:34 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c: In function 'input_n':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem08.c:31:5: warning: implicit declaration of function 'prinf' [-Wimplicit-function-declaration]
     prinf("Please enter the total size of the array: ");
     ^~~~~
C:\Users\zaina\AppData\Local\Temp\ccx0G4ui.o: In function `input_n':
c:/Users/zaina/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz/set02/problem08.c:31: undefined reference to `prinf'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 11/25/2023, 3:57:38 PM
Compilation started at 11/25/2023, 3:57:57 PM
Compilation finished at 11/25/2023, 3:58:01 PM
Compilation started at 11/25/2023, 3:58:31 PM
Compilation finished at 11/25/2023, 3:58:35 PM
Compilation started at 11/26/2023, 5:35:35 PM
Compilation finished at 11/26/2023, 5:35:40 PM
